<resources>
    <string name="app_name">MovieHive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="moviehive">MovieHive</string>
    <string name="now_showing">Now Showing</string>
    <string name="moviename">MovieName</string>
    <string name="rate">Rate</string>
    <string name="popular">Popular</string>
    <string name="description">Description</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="trailer_is_not_available">Trailer is not available</string>
</resources>