<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailsFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moviehive"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/titleColor"
            android:textStyle="bold"
            android:id="@+id/appName"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appName"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/posterImage"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/posterImage"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/moviename"
            android:textSize="@dimen/_25sdp"
            android:textColor="@color/titleColor"
            android:textStyle="bold"
            android:id="@+id/movieName"/>
        <ImageView
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:src="@drawable/baseline_star_24"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            app:layout_constraintStart_toStartOf="@id/movieName"
            app:layout_constraintTop_toBottomOf="@id/movieName"
            android:id="@+id/rateStar"/>
        <TextView
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/rate"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="@id/rateStar"
            app:layout_constraintStart_toEndOf="@id/rateStar"
            app:layout_constraintTop_toTopOf="@id/rateStar" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/movieName"
            app:layout_constraintTop_toBottomOf="@id/rateStar"
            android:text="@string/description"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_25sdp"
            android:textColor="@color/titleColor"
            android:textStyle="bold"
            android:id="@+id/txtDescription"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.90"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtDescription"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            android:justificationMode="inter_word"
            android:id="@+id/description"
            android:textColor="@color/descriptionColor"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:backgroundTint="@color/mainColor"
            app:cornerRadius="@dimen/_10sdp"
            android:text="@string/play_trailer"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/btn_Play"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>