<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moviehive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/titleColor"
        android:textStyle="bold"
        android:id="@+id/appName"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName"
        android:text="@string/now_showing"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/titleColor"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:id="@+id/txt_NowShowing"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_NowShowing"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal"
        tools:listitem="@layout/now_showing_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:id="@+id/nowShowingRecycler"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular"
        app:layout_constraintStart_toStartOf="@id/txt_NowShowing"
        app:layout_constraintTop_toBottomOf="@id/nowShowingRecycler"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:textColor="@color/titleColor"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/textPopular"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textPopular"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        android:id="@+id/popularRecycler"/>

    
</androidx.constraintlayout.widget.ConstraintLayout>